Alterações no formulário

--- a/meuProjetoFrontEnd/src/app/app.component.html
+++ b/meuProjetoFrontEnd/src/app/app.component.html
@@ -1,9 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<mat-toolbar>
-  <span>Bem vindo ao {{ title }}!</span>
+<mat-toolbar color="primary">
+    <mat-toolbar-row>
+      <span>Bem vindo ao {{ title }}</span>
+      <mat-icon svgIcon="thumbs-up"></mat-icon>
+    </mat-toolbar-row>
 </mat-toolbar>
-
-<br>
-
-
-  <app-pessoal-controller></app-pessoal-controller>
+<app-pessoal-controller></app-pessoal-controller>
