alterações nos nomes dos pacotes classes reajustação de métodos e adição de classe de serviços

--- a/meuProjetoFrontEnd/src/app/app.component.html
+++ b/meuProjetoFrontEnd/src/app/app.component.html
@@ -5,4 +5,4 @@
       <mat-icon svgIcon="thumbs-up"></mat-icon>
     </mat-toolbar-row>
 </mat-toolbar>
-<app-pessoal-controller></app-pessoal-controller>
+<app-pessoa></app-pessoa>
