Alterações no Projeto

--- a/meuProjetoFrontEnd/src/app/pessoa-componentes/pessoa.component.html
+++ b/meuProjetoFrontEnd/src/app/pessoa-componentes/pessoa.component.html
@@ -1,32 +1,32 @@
 <div class="container">
   <h1>Cadastro de Pessoas</h1>
   
-  <form #cadastroPessoa="ngForm">
+  <form method="POST" #cadastroPessoa="ngForm" (ngSubmit)="criar(cadastroPessoa)">
         <div class="form-group">
           <label for="name">Nome</label>
-          <input type="text" class="form-control" id="nome" [(ngModel)]="pessoa.nome" name="nome">
+          <input type="text" class="form-control" id="nome" [(ngModel)]="pessoa.nome" name="nome" required>
         </div>
            <br>
         <div class="form-group">
           <label for="name">Email</label>
-          <input type="email" class="form-control" id="email" [(ngModel)]="pessoa.email" name="email">
+          <input type="email" class="form-control" id="email" [(ngModel)]="pessoa.email" name="email" required email>
         </div>
           <br>
         <div class="form-group">
           <label for="name">Sexo</label>
-          <input type="text" class="form-control" id="sexo" [(ngModel)]="pessoa.sexo" name="sexo">
+          <input type="text" class="form-control" id="sexo" [(ngModel)]="pessoa.sexo" name="sexo" required>
         </div>
           <br>
         <div class="form-group">
           <label for="name">Data Nascimento</label>
-          <input type="date" class="form-control" id="data_nascimento" [(ngModel)]="pessoa.data_nascimento" name="data_nascimento">
+          <input type="date" class="form-control" id="data_nascimento" [(ngModel)]="pessoa.data_nascimento" name="data_nascimento" required>
         </div>
           <br>
         <div class="form-group">
           <label for="name">CPF</label>
-          <input type="text" class="form-control" id="cpf" [(ngModel)]="pessoa.cpf" name="cpf">
+          <input type="text" class="form-control" id="cpf" [(ngModel)]="pessoa.cpf" name="cpf" required>
         </div>
           <br>
-        <button (click)="enviarDados()" type="submit" class="btn btn-success">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="cadastroPessoa.invalid" (click)="enviarDados()">Salvar</button>
   </form>
 </div>
