Alterações nos métodos HTTP para interação com API backend.

--- a/meuProjetoFrontEnd/src/app/app.component.html
+++ b/meuProjetoFrontEnd/src/app/app.component.html
@@ -5,4 +5,4 @@
       <mat-icon svgIcon="thumbs-up"></mat-icon>
     </mat-toolbar-row>
 </mat-toolbar>
-<app-pessoa></app-pessoa>
+<app-list-pessoa></app-list-pessoa>
