--- a/meuProjetoFrontEnd/src/app/pessoa-componentes/pessoa.component.html
+++ b/meuProjetoFrontEnd/src/app/pessoa-componentes/pessoa.component.html
@@ -20,7 +20,7 @@
           <br>
         <div class="form-group">
           <label for="data_nascimento">Data Nascimento</label>
-          <input type="date" class="form-control" id="data_nascimento" [(ngModel)]="pessoa.data_nascimento" name="data_nascimento" required>
+          <input type="date" class="form-control" id="data_nascimento" [(ngModel)]="pessoa.dataNascimento" name="data_nascimento" required>
         </div>
           <br>
         <div class="form-group">
